--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,8 @@ html
     link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet', media='screen')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    if info
+      p(style="color: red") !{info}
     block content
 
   script(src='http://code.jquery.com/jquery.js')
