--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -2,3 +2,13 @@
   <p> You are logged in as {{user.username}}! </p>
 {{/if}}
 <h2> Here is the Admin page! </h2>
+<form role="form", action="/admin", method="post">
+  <div class="form-group">
+    <input class="form-control" type="text" name="question" placeholder="Enter question">
+  </div>
+  <div class="form-group">
+    <input class="form-control" type="date" name="date" value={{ current_date }}>
+  </div>
+  <input type="submit" value="Submit" class="btn btn-default">
+  <a href="/" class="btn btn-primary">Cancel </a>
+</form>
