--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -33,6 +33,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+  {{#if info}}
+    <p> {{ info }} </p>
+  {{/if}}
   {{{body}}}
   <script src='http://code.jquery.com/jquery.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
