--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -2,18 +2,18 @@
   <p> You are logged in as {{user.username}}! </p>
 {{/if}}
 <h2> Here is the Questions for students page! </h2>
-<form role="form" action="/register" method="POST" style="max-width: 300px;">
+<form role="form" action="/questions" method="POST" style="max-width: 600px;">
   <div class='form-group'>
-    <label>First Question Here<label>
-        <input class='form-control' type="text" name="question1" placeholder="answer1">
+    <label for="question1">How well did you understand todays lesson? (Scale of 1-5, Multiple choice)<label>
+    <input class='form-control' id="question1" type="text" name="question1" placeholder="answer1">
   </div>
   <div class='form-group'>
-    <label>Second Question Here<label>
-        <input class='form-control' type="text" name="question2" placeholder="answer2">
+    <label for="question2">What did you learn today? (Short answer, ~3-4 sentences)<label>
+    <input class='form-control' id="question2" type="text" name="question2" placeholder="answer2">
   </div>
   <div class='form-group'>
-    <label>Third Question Here<label>
-        <input class='form-control' type="text" name="question3" placeholder="answer3">
+    <label for="question3">{{custom_question}}<label>
+    <input class='form-control' id="question3" type="text" name="question3" placeholder="answer3">
   </div>
   <button class="btn btn-default" type="submit">Submit</button> &nbsp;
   <a href="/">
